<resources>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="app_name">Employee Connect</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">userprofile@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_message">Messages</string>
    <string name="action_about">About Us</string>
    <string name="action_profile">Profile</string>
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_store_id">Store ID</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="checkbox_manager">I am manager</string>
    <string name="btn_sign_up_now">Sign Up Now</string>
    <string name="log_in_now_text">Already have an account. Log In Now.</string>
    <string name="sign_up_now_text">Don\'t have an account. Sign Up Now.</string>
    <string name="app_logo_description">App Logo</string>
    <string name="ex_msg">Sender Name</string>
    <string name="ex_time">time</string>
    <string name="ex_msg_body">Text Message</string>
    <string name="ex_event">Event</string>
    <string name="save_changes_btn">Save Changes</string>
    <string name="private_profile_switch">Private Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_message">Input Message</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="employee_secret_key">1234567890</string>
    <string name="admin_secret_key">0987654321</string>
    <string name="wrong_employer_code_msg">Wrong Employer code. Please Try again.</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="sign_up_text"><![CDATA[Don\'t have an Account Sign up Now>]]></string>
    <string name="user_id_hint">User Id</string>
    <string name="pin_hint">Pin</string>
    <string name="login_btn_text">Login</string>
    <string name="default_pic_content_description">default pic</string>
    <string name="sign_up_user_name">Name</string>
    <string name="sign_up_confirm_pin">Confirm Pin</string>
    <string name="sign_up_employer_code">Employer Code</string>
    <string name="sign_up_email">Email</string>
    <string name="UserName">UserName</string>
    <string name="job_title_ex_morning_shift">Job Title. Ex. Morning Shift</string>
    <string name="click_to_assign_start_time">click to Assign Start Time</string>
    <string name="click_to_assign_end_time">Click to Assign End Time</string>
    <string name="write_note">Write note....</string>
    <string name="add">Add</string>
    <string name="event_deault_user_name">No Name</string>
    <string name="event_deault_note">Notes</string>
    <string name="event_deault_end_time">End Time: 00:00pm</string>
    <string name="event_default_start_time">Start time: 00:00am</string>
    <string name="event_deault_name">Name Event</string>

</resources>
