<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/action_schedule" />
        <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/action_message"/>
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/action_about" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/action_profile" />
    </group>

</menu>
