<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="@dimen/app_logo_width"
                android:layout_height="@dimen/app_logo_height"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_logo_description"
                android:src="@mipmap/ic_launcher_round"  />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/hint_first_name"
                android:autofillHints="@string/hint_first_name"
                tools:targetApi="o"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/hint_last_name"
                android:autofillHints="@string/hint_last_name"
                tools:targetApi="o"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/private_profile_switch"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:switchPadding="7dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_changes_btn"
                android:layout_gravity="center"
                android:onClick="saveChanges"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>