<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp"
    android:id="@+id/chat_message_card">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/chat_message_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:id="@+id/chat_message_profileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chat_message_textView_senderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ex_msg"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chat_message_textView_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_time"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/chat_message_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/ex_msg_body"
            android:textSize="22sp" />
    </LinearLayout>
</android.support.v7.widget.CardView>